# EncodeX

./: .gitignore
backend/: database.py  main.py  pyproject.toml  requirements.txt  users.db
backend/controllers/: auth_controller.py  caesar_controller.py  rail_fence_controller.py  rsa_controller.py
backend/models/requests/: auth_request.py  caesar_request.py  rail_fence_request.py  rsa_request.py
backend/models/responses/: auth_response.py  caesar_response.py  rail_fence_response.py  rsa_response.py
backend/routers/: auth_route.py  caesar_route.py  rail_fence_route.py  rsa_route.py
backend/services/: auth_service.py  caesar_service.py  rail_fence_service.py  rsa_service.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/auth/: Login.jsx
frontend/src/components/cipher/: CaesarCipher.jsx  RSACipher.jsx  RailFenceCipher.jsx  VisualizaitonStep.jsx
frontend/src/services/: api.js
