[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.136.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
